2009-02-02  Geoffrey Garen  <ggaren@apple.com>

        Build fix.

        * plugins/PluginView.cpp:
        (WebCore::PluginView::performRequest):

2009-02-02  Geoffrey Garen  <ggaren@apple.com>

        Build fix.

        * WebCore.base.exp:

2009-02-02  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.

        Track redirects in global history.

        * WebCore.base.exp: Renamed some exports.
        
        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::createWindow):
        (windowProtoFuncOpen):
        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::setLocation):
        * bindings/js/JSDocumentCustom.cpp:
        (WebCore::JSDocument::setLocation):
        * bindings/js/JSHTMLFormElementCustom.cpp:
        (WebCore::JSHTMLFormElement::submit):
        * bindings/js/JSLocationCustom.cpp:
        (WebCore::JSLocation::setHref):
        (WebCore::JSLocation::setProtocol):
        (WebCore::JSLocation::setHost):
        (WebCore::JSLocation::setHostname):
        (WebCore::JSLocation::setPort):
        (WebCore::JSLocation::setPathname):
        (WebCore::JSLocation::setSearch):
        (WebCore::JSLocation::setHash):
        (WebCore::JSLocation::assign): Treat any navigation that is not initiated
        by the user as a redirect from the perspective of global history.

        * history/HistoryItem.cpp:
        (WebCore::HistoryItem::addRedirectURL): Store the last URL in the redirect
        chain.

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::DocumentLoader):
        * loader/DocumentLoader.h:
        (WebCore::DocumentLoader::urlForHistoryReflectsServerRedirect):
        (WebCore::DocumentLoader::urlForHistoryReflectsClientRedirect):
        (WebCore::DocumentLoader::setURLForHistoryReflectsClientRedirect): Sadly,
        added yet another way to track redirect state during loading, since none
        of the others did what I wanted, and I didn't want to cause behavior